objects/zqu__QuoteCharge__c.object
<CustomObject>
    <description>The Charges that are related to a Quote.</description>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bill Cycle Day of RatePlan Charge</description>
        <label>Bill Cycle Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingPeriodAlignment__c</fullName>
        <label>Billing Period Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AlignToCharge</fullName>
                </value>
                <value>
                    <fullName>AlignToSubscriptionStart</fullName>
                </value>
                <value>
                    <fullName>AlignToTermStart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ChargeType__c</fullName>
        <description>Type from ProductRatePlanCharge</description>
        <inlineHelpText>Type from ProductRatePlanCharge</inlineHelpText>
        <label>Charge Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EffectivePrice__c</fullName>
        <description>The Effective Price of the Charge.</description>
        <inlineHelpText>The Effective Price of the Charge.</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__FeeType__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__FirstPeriodCharge__c</fullName>
        <formula>CASE(zqu__ChargeType__c,
  &apos;Usage&apos;,0,
  &apos;One-Time&apos;,CASE(zqu__FeeType__c,
                    &apos;n/a&apos;, zqu__Total__c,
                    zqu__TCVForRollup__c),
  &apos;Recurring&apos;,IF(BEGINS( zqu__Model__c , &apos;Flat Fee&apos;) , 
                    zqu__EffectivePrice__c , 
                    CASE(zqu__FeeType__c,
                    &apos;Flat Fee&apos;, zqu__EffectivePrice__c,
                    &apos;n/a&apos;, zqu__Total__c,
                    zqu__Quantity__c * zqu__EffectivePrice__c
                  )
              ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Period Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListPriceDisplay__c</fullName>
        <label>List Price Display</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <formula>IF(zqu__ListPriceDisplay__c  == 0, zqu__ProductRatePlanCharge__r.zqu__ListPrice__c, zqu__ListPriceDisplay__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ListTotal__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRRForRollup__c</fullName>
        <label>MRR For Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <formula>IF ( OR ( zqu__Model__c == &apos;Discount-Fixed Amount&apos; , zqu__Model__c == &apos;Discount-Percentage&apos; ),
0,

IF(zqu__ChargeType__c == &apos;One-Time&apos;, 0,
  IF( AND(zqu__ChargeType__c == &apos;Recurring&apos;,zqu__PeriodNumeric__c != 0, NOT( ISNULL(zqu__PeriodNumeric__c )) ),
    IF(BEGINS(zqu__Model__c, &apos;Flat Fee&apos;),
      zqu__EffectivePrice__c / zqu__PeriodNumeric__c,
      CASE(zqu__FeeType__c,
        &apos;Flat Fee&apos;, zqu__EffectivePrice__c / zqu__PeriodNumeric__c,
        IF(zqu__Model__c == &apos;Tiered Pricing&apos; &amp;&amp; zqu__ChargeType__c != &apos;Usage&apos;,
            zqu__Total__c,
            zqu__EffectivePrice__c * zqu__Quantity__c
        ) / zqu__PeriodNumeric__c
      )
    ),
  0) 
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PeriodNumeric__c</fullName>
        <defaultValue>0</defaultValue>
        <description>numerical mapping of &lt;Period&gt; field</description>
        <label>Period Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Period__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Prepay__c</fullName>
        <label>Prepay</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PrepaymentPeriods__c</fullName>
        <description>The number of Periods that will be Prepayed.</description>
        <inlineHelpText>The number of Periods that will be Prepayed.</inlineHelpText>
        <label>Prepayment Periods</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductName__c</fullName>
        <description>QuoteCharge refered ProductName</description>
        <inlineHelpText>QuoteCharge refered ProductName</inlineHelpText>
        <label>Product Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Rate Plan Charge associated with this Quote.</description>
        <inlineHelpText>The Rate Plan Charge associated with this Quote.</inlineHelpText>
        <label>Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charges</relationshipLabel>
        <relationshipName>R00N40000001mFW5EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanName__c</fullName>
        <description>QuoteCharge refered Product RatePlan Name</description>
        <inlineHelpText>QuoteCharge refered Product RatePlan Name</inlineHelpText>
        <label>RatePlan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Quantity__c</fullName>
        <description>The Quantity of the Charge.</description>
        <inlineHelpText>The Quantity of the Charge.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The Quote related to the Charges.</description>
        <inlineHelpText>The Quote related to the Charges.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Charges</relationshipLabel>
        <relationshipName>QuoteCharge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanCharge_ZuoraID__c</fullName>
        <description>The related Rate Plan Charge&apos;s Zuora Id</description>
        <inlineHelpText>The related Rate Plan Charge&apos;s Zuora Id</inlineHelpText>
        <label>RatePlanCharge_ZuoraID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificBillingPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCVForRollup__c</fullName>
        <label>TCV For Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <formula>IF ( OR ( zqu__Model__c == &apos;Discount-Fixed Amount&apos; , zqu__Model__c == &apos;Discount-Percentage&apos;, ISPICKVAL(zqu__Quote__r.zqu__Subscription_Term_Type__c, &apos;Evergreen&apos;)),
       0,
       IF(zqu__ChargeType__c ==&apos;Usage&apos;, 
            0, 
            IF(zqu__ChargeType__c ==&apos;One-Time&apos;, 
  
                IF(BEGINS(zqu__Model__c , &apos;Flat Fee&apos;) , 
                     zqu__EffectivePrice__c , 
                     CASE(zqu__FeeType__c,
                                 &apos;Flat Fee&apos;, zqu__EffectivePrice__c,
                                 IF(zqu__Model__c == &apos;Tiered Pricing&apos;, zqu__Total__c, zqu__EffectivePrice__c * zqu__Quantity__c))
                ),
      
               IF(zqu__ChargeType__c ==&apos;Recurring&apos;,
                    zqu__MRR__c * zqu__Quote__r.zqu__InitialTerm__c ,
                    0)
            )
       )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__TimeProductAdded__c</fullName>
        <label>Time Product Added</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Total_Discount_Amount__c</fullName>
        <formula>CASE(zqu__ChargeType__c ,
    	&apos;Usage&apos;, 0, zqu__ListTotal__c - zqu__Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <inlineHelpText>The date when the charge becomes effective, and billing begins.</inlineHelpText>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerEvent__c</fullName>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContractEffective</fullName>
                </value>
                <value>
                    <fullName>ServiceActivation</fullName>
                </value>
                <value>
                    <fullName>CustomerAcceptance</fullName>
                </value>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <formula>CASE(zqu__ProductRatePlanCharge__r.zqu__Type__c,&quot;One-Time&quot;,&quot;One-Time&quot;,&quot;Recurring&quot;,&quot;Recurring&quot;,&quot;Usage&quot;,&quot;Usage&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <label>UOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Charge</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__TimeProductAdded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charges</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__ReadOnly</fullName>
        <active>true</active>
        <label>ReadOnly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>